Fix waybar GPU icon alignment

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -56,9 +56,6 @@ window#waybar.empty {
 #battery.bat2,
 #clock,
 #cpu,
-#custom-mail,
-#custom-poweroff,
-#custom-weather,
 #disk,
 #idle_inhibitor,
 #memory,
